--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     Quos alias mollitia tenetur magnam, saepe nulla! Incidunt amet suscipit modi perspiciatis neque iste corrupti deserunt beatae, velit quisquam nobis, corporis accusantium, veniam a debitis distinctio cumque maxime praesentium nihil!
     Explicabo deserunt perferendis, cumque dignissimos enim nostrum quo dolore atque aut? Ipsum, excepturi, aperiam, pariatur illum beatae nulla neque minima aspernatur exercitationem dignissimos debitis tenetur. Ad fugit dolore necessitatibus recusandae.
 </p>
+<button>Click Me</button>
     <script src="/script.js"></script>
 </body>
 </html>
